--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-size: 100%;
+  overflow-y: scroll;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: none;">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,54 +18,88 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <link href="css/style.min.css" rel="stylesheet" media="screen">
+    <style type="text/css">
+      @media only screen and (max-width: 480px) {
+        body { font-size: 12px;}
+        header p { padding-left: 4.5em;}
+      }
+    </style>
     <link href="css/print.min.css" rel="stylesheet" media="print">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/application.min.js"></script>
   </head>
 
-  <body>
-    <header>
-      <a href="/"><img height="70" width="70" src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+  <body style="background: #fff; margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400;">
+    <header style="padding: 0 0.5em; color: #C90B0B; max-width: 45em; margin: 0 auto;">
+      <a href="/"><img style="border-radius: 40px; float: left; border: 0; max-width: 100%;" height="70" width="70" src="img/profilepic.jpg"></a>
+      <p style="font-size:1.5em; font-weight: bold; padding-left: 4em;">Cameron Pittman<br><span style="font-size: 0.8em; font-weight: normal;">Course Developer</span></p>
     </header>
 
-    <div class="container">
-      <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+    <div style="max-width: 45em; margin: 0 auto;" class="container">
+      <div style="padding: 2em;
+                  background-color: #f8f8f8;
+                  font-size:1.2em;
+                  border-bottom: 1px solid #ccc;
+                  border-top: 1px solid #ccc;"
+           class="hero">
+        <strong style="font-weight: bold;">I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
 
-      <div class="content">
-        <ul>
-          <li>
-            <img height="50" width="100" src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
+      <div style="padding: 1em 1em;" class="content">
+        <ul style="margin: 1em 0; padding: 0 0 0 20px;">
+          <li style="list-style-type: none; font-size: 1.1em;">
+            <img style="float:left;
+                        padding-right: 1em;
+                        border: 0;
+                        max-width: 100%;"
+                 height="50" width="100"
+                 src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
             <a href="project-2048.html">Build Your Own 2048!</a>
-            <p>I made my own version of 2048. How cool is that!?</p>
+            <p style="font-size: 0.9em; font-style: italic;">I made my own version of 2048. How cool is that!?</p>
           </li>
 
-          <li>
-            <img height="61" width="100" src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
+          <li style="list-style-type: none; font-size: 1.1em;">
+            <img style="float:left;
+                        padding-right: 1em;
+                        border: 0;
+                        max-width: 100%;"
+                 height="61" width="100"
+                 src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
             <a href="project-webperf.html">Website Performance Optimization</a>
-            <p>Hey... this class looks familiar.</p>
+            <p style="font-size: 0.9em; font-style: italic;">Hey... this class looks familiar.</p>
           </li>
 
-          <li>
-            <img height="62" width="100" src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
+          <li style="list-style-type: none; font-size: 1.1em;">
+            <img style="float:left;
+                        padding-right: 1em;
+                        border: 0;
+                        max-width: 100%;"
+                 height="62" width="100"
+                 src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
             <a href="project-mobile.html">Mobile Web Development</a>
-            <p>Making mobile apps isn't so hard after all.</p>
+            <p style="font-size: 0.9em; font-style: italic;">Making mobile apps isn't so hard after all.</p>
           </li>
 
-          <li>
-            <img height="75" width="100" src="img/pizzeria-thumbnail.jpg">
+          <li style="list-style-type: none; font-size: 1.1em;">
+            <img style="float:left;
+                        padding-right: 1em;
+                        border: 0;
+                        max-width: 100%;"
+                 height="75" width="100" src="img/pizzeria-thumbnail.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
         </ul>
     </div>
 
-    <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+    <footer style="padding: 0 0.5em;
+                   border-top: 1px solid #ccc;
+                   max-width: 45em;
+                   margin: 0 auto;">
+      <p>
+        &copy; Web Performance 2014
+        <span style="float: right; font-style: italic;" id="crp-stats"></span>
+      </p>
     </footer>
   </body>
 </html>
